2017-01-09  Michael Wiegand <michael.wiegand@greenbone.net>

	* src/log.c (log_get_fd): Document return value correctly.

2017-01-06  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c: Include gvm/base/hosts.h instead of
	openvas/base/openvas_hosts.h
	Use gvm_host_t and gvm_hosts_t instead of openvas_host_t
	and opnevas_hosts_t.
	(apply_hosts_preferences): Use gvm_hosts_shuffle, gvm_hosts_exclude,
	gvm_hosts_reverse_lookup_unify, gvm_hosts_reverse_lookup_only and
	gvm_hosts_reverse instead of openvas_hosts_shuffle,
	openvas_hosts_exclude, openvas_hosts_reverse_lookup_unify,
	openvas_hosts_reverse_lookup_only and openvas_hosts_reverse
	(host_authorized): Use gvm_host_in_hosts instead of openvas_host_in_hosts.
	(attack_network): Use gvm_hosts_free, gvm_hosts_next,
	gvm_host_reverse_lookup, gvm_host_value_str, gvm_host_get_addr6 and
	gvm_hosts_new instead of openvas_hosts_free, openvas_hosts_next,
	openvas_host_reverse_lookup, openvas_host_value_strm
	openvas_host_get_addr6 and openvas_hosts_new.

2017-01-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/nasl_plugins.c (nasl_thread): Use GVM_DROP_PRIVILEGES_OK instead
	OPENVAS_DROP_PRIVILEGES_OK and GVM_DROP_PRIVILEGES_FAIL_NOT_ROOT
	instead of OPENVAS_DROP_PRIVILEGES_FAIL_NOT_ROOT.

2016-12-23  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/attack.c: Include gvm/base/networking.h instead of
	openvas/base/openvas_networking.h.
	(apply_source_iface_preference): Use gvm_source_iface_init instead
	of openvas_source_iface_init. Use gvm_source_addr_str instead of
	openvas_source_addr_str. Use gvm_source_addr6_str instead of
	openvas_source_addr6_str.

	* src/hosts.c: Add a need include.

2016-12-21  Michael Wiegand <michael.wiegand@greenbone.net>

	Make location of access key configurable.

	* CMakeLists.txt: Expose OPENVAS_ACCESS_KEY_DIR, defaulting to
	OPENVAS_SYSCONF_DIR.

	* tools/greenbone-nvt-sync.in: Use OPENVAS_ACCESS_KEY_DIR to determine
	location of access key.
