@@ -242,8 +242,6 @@ add_subdirectory (src)
 
 add_subdirectory (doc)
 
-## Install
-
 
 ## Install
 
