@@ -1,3 +1,9 @@
+2017-01-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* src/openvassd.c (main): Remove support for --gnupg-home.
+	We actually do not need it. The key directory will be determined
+	explicitly.
+
 2017-01-09  Michael Wiegand <michael.wiegand@greenbone.net>
 
 	* src/log.c (log_get_fd): Document return value correctly.
